issue with col hiding was on wrong viewport Fixed

--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
@@ -34,11 +34,11 @@
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.name).Titled("name");
-    columns.Add(c => c.cVariableMask).Titled("cVariableMask").Css("d-none d-md-table-cell");
-    columns.Add(c => c.cVariableSearchMask).Titled("cVariableSearchMask").Css("d-none d-md-table-cell");
-    columns.Add(c => c.cErrorMask).Titled("cErrorMask").Css("d-none d-md-table-cell");
-    columns.Add(c => c.cCSVLogMask).Titled("cCSVLogMask").Css("d-none d-md-table-cell");
-    columns.Add(c => c.cDeviceInfoMask).Titled("cDeviceInfoMask").Css("d-none d-md-table-cell");
+    columns.Add(c => c.cVariableMask).Titled("cVariableMask").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.cVariableSearchMask).Titled("cVariableSearchMask").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.cErrorMask).Titled("cErrorMask").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.cCSVLogMask).Titled("cCSVLogMask").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.cDeviceInfoMask).Titled("cDeviceInfoMask").Css("d-none d-lg-table-cell");
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
