--- a/EqUiWebUi/Areas/VASC/Views/c_variable/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable/_List.cshtml
@@ -5,9 +5,9 @@
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
     columns.Add(c => c.variable).Titled("variable");
-    columns.Add(c => c._Poll_Rate).Titled("_Poll_Rate").Css("d-none d-md-table-cell");
-    columns.Add(c => c._Event_code).Titled("_Event_code").Css("d-none d-md-table-cell");
-    columns.Add(c => c.sql_action).Titled("_SQL_Action").Css("d-none d-md-table-cell"); //this should be multiselect!
+    columns.Add(c => c._Poll_Rate).Titled("_Poll_Rate").Css("d-none d-lg-table-cell");
+    columns.Add(c => c._Event_code).Titled("_Event_code").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.sql_action).Titled("_SQL_Action").Css("d-none d-lg-table-cell"); //this should be multiselect!
     columns.Add(c => c.rt_table).Titled("rt_table");
     columns.Add(c => c)
                     .Titled("")
