working on class tools

--- a/EqUiWebUi/Views/Classification/ClassificationTool.cshtml
+++ b/EqUiWebUi/Views/Classification/ClassificationTool.cshtml
@@ -17,29 +17,29 @@
                 </div>
                 <div class="card-body">
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.c_logClassSystem_id, "c_logClassSystem_id", htmlAttributes: new { @class = "control-label col-md-4" })
-                            <div class="col-md-8">
-                                @Html.DropDownList("c_logClassSystem_id", null, htmlAttributes: new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.c_logClassSystem_id, "", new { @class = "text-danger" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.c_logClassSystem_id, "c_logClassSystem_id", htmlAttributes: new { @class = "control-label col-md-4" })
+                        <div class="col-md-8">
+                            @Html.DropDownList("c_logClassSystem_id", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.c_logClassSystem_id, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.coderangeStart, htmlAttributes: new { @class = "control-label col-md-4" })
-                            <div class="col-md-8">
-                                @Html.EditorFor(model => model.coderangeStart, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.coderangeStart, "", new { @class = "text-danger" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.coderangeStart, htmlAttributes: new { @class = "control-label col-md-4" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.coderangeStart, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.coderangeStart, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.coderangeEnd, htmlAttributes: new { @class = "control-label col-md-4" })
-                            <div class="col-md-8">
-                                @Html.EditorFor(model => model.coderangeEnd, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.coderangeEnd, "", new { @class = "text-danger" })
-                            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.coderangeEnd, htmlAttributes: new { @class = "control-label col-md-4" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.coderangeEnd, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.coderangeEnd, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.textSearch, htmlAttributes: new { @class = "control-label col-md-4" })
@@ -60,6 +60,20 @@
             <hr />
 
             <div class="card">
+                <div class="card-header bg-warning">
+                    <h5 class="card-title text-white">
+                        Result
+                        <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+                    </h5>
+                </div>
+                <div class="card-body">
+                    <div id="dummyLogClassResultGrid" class="mvc-grid">results load here</div>
+                </div>
+            </div>
+
+            <hr />
+
+            <div class="card">
                 <div class="card-header bg-primary">
                     <h5 class="card-title text-white">
                         Set Class and Subgroup
@@ -70,34 +84,30 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.c_ClassificationId, "c_ClassificationId", htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-10">
-                            @Html.DropDownList("c_ClassificationId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.DropDownList("c_ClassificationId", null, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select class--")
                             @Html.ValidationMessageFor(model => model.c_ClassificationId, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.c_SubgroupId, "c_SubgroupId", htmlAttributes: new { @class = "control-label col-md-4" })
                         <div class="col-md-10">
-                            @Html.DropDownList("c_SubgroupId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.DropDownList("c_SubgroupId", null, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select subgroup--")
                             @Html.ValidationMessageFor(model => model.c_SubgroupId, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <button class="btn btn-info" id="btnFindAllinGroup">Find all in group</button>
+                            <button class="btn btn-info" id="btnFindAllinGroup">Find all logs in group</button>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <button class="btn btn-info" id="btnGetRules">Get all rules</button>
+                            <button class="btn btn-info" id="btnGetRules">Find all rules in group</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <hr />
-
-
 
         <hr />
 
@@ -115,7 +125,7 @@
                     </div>
                 </div>
 
-                <div>grid</div>
+                <div id="c_LogClassRulesGrid" class="mvc-grid">results load here</div>
 
                 <div>Grid row dropdown option. Clear rule / delete rule / Remove rule. / Run rule / run rule with override manual set</div>
 
@@ -125,12 +135,6 @@
 </div>
 
 
-        <div class="card">
-            <div class="card-body">
-                    <div id="l_dummyLogClassResultGrid" class="mvc-grid"></div>
-            </div>
-
-        </div>
 
 @section scripts{
     <!--ClassificationTool script-->
@@ -139,17 +143,22 @@
         $("#allcontent").removeClass("body-content");
         $("#allcontent").removeClass("container");
 
-
-        
-    //handle search. (by range and logtext)
-        $('#btnSearch').click(function () {
-            console.log('hit');
-
-            $('#l_dummyLogClassResultGrid').mvcgrid({
-                sourceUrl: '@Url.Action("_logSearchResult")', 
+    //function to reload search grid
+        function GetGridSearch(bSearchByClassification) {
+            $("#dummyLogClassResultGrid").mvcgrid({
+                sourceUrl: '@Url.Action("_logSearchResult")',
                 data: {
+                    c_logClassSystem_id: $('#c_logClassSystem_id').val(),
+                    coderangeStart: $('#coderangeStart').val(),
+                    coderangeEnd: $('#coderangeEnd').val(),
+                    textSearch: $('#textSearch').val(),
+                    c_ClassificationId: $('#c_ClassificationId').val(),
+                    c_SubgroupId: $('#c_SubgroupId').val(),
+                    SearchByClassification: bSearchByClassification
+
                 },
                 requestType: 'get',
+                reload: true,
                 reloadStarted: function () {
 
                 },
@@ -157,16 +166,48 @@
 
                 },
                 reloadFailed: function (result) {
-                    $('#l_dummyLogClassResultGrid').html("Error while loading!!!");
+                    $('#dummyLogClassResultGrid').html("Error while loading!!!");
                 }
             });
+        }
 
-            console.log('end');
+    //handle search. (by range and logtext)
+        $("#btnSearch").click(function () {
+            GetGridSearch(false);
         });
     //hanlde sreach (all in selecte subgroup and class)
         $('#btnFindAllinGroup').click(function () {
-            console.log('hit2');
+            GetGridSearch(true);
         });
+
+    //get logclassRulesGrid
+        function GetRules() {
+            $("#c_LogClassRulesGrid").mvcgrid({
+                sourceUrl: '@Url.Action("_GetLogClassRulesGrid", "c_logClassRules")',
+                data: {
+                    c_ClassificationId: $('#c_ClassificationId').val(),
+                    c_SubgroupId: $('#c_SubgroupId').val(),
+                    c_logClassSystem_id: $('#c_logClassSystem_id').val()
+                },
+                requestType: 'get',
+                reload: true,
+                reloadStarted: function () {
+
+                },
+                reloadEnded: function () {
+
+                },
+                reloadFailed: function (result) {
+                    $('#c_LogClassRulesGrid').html("Error while loading!!!");
+                }
+            });
+        }
+
+     //hanlde get rules
+     $('#btnGetRules').click(function () {
+         GetRules();
+     });
+
 
 
     </script>
