--- a/EqUiWebUi/Views/Shared/Error.cshtml
+++ b/EqUiWebUi/Views/Shared/Error.cshtml
@@ -3,14 +3,14 @@
 }
 <div class="jumbotron">
     <h1>I'm so sorry</h1>
-    <h3>I looks like Sam broke something.</h3>
+    <h3>It looks like Sam broke something.</h3>
     <i class="fas fa-ambulance fa-4x"></i>
     <div>
         Let him know he is a
         <i class="fab fa-sticker-mule fa-2x"></i>
         grab a
         <i class="fas fa-coffee fa-2x"></i>
-        and tel him to fix it
+        and tell him to fix it
     </div>
 </div>
 
