--- a/EqUiWebUi/Views/c_LogClassRules/Details.cshtml
+++ b/EqUiWebUi/Views/c_LogClassRules/Details.cshtml
@@ -1,8 +1,6 @@
 ﻿@model EqUiWebUi.Models.c_LogClassRules
 
-@{
-    Layout = null;
-}
+
 
 <!DOCTYPE html>
 
@@ -17,27 +15,27 @@
         <hr />
         <dl class="dl-horizontal">
             <dt>
-                @Html.DisplayNameFor(model => model.Err_start)
+                @Html.DisplayNameFor(model => model.coderangeStart)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.Err_start)
+                @Html.DisplayFor(model => model.coderangeStart)
             </dd>
     
             <dt>
-                @Html.DisplayNameFor(model => model.Err_end)
+                @Html.DisplayNameFor(model => model.coderangeEnd)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.Err_end)
+                @Html.DisplayFor(model => model.coderangeEnd)
             </dd>
     
             <dt>
-                @Html.DisplayNameFor(model => model.Err_text)
+                @Html.DisplayNameFor(model => model.textSearch)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.Err_text)
+                @Html.DisplayFor(model => model.textSearch)
             </dd>
     
             <dt>
