--- a/EqUiWebUi/Views/EQUISetup/_settings.cshtml
+++ b/EqUiWebUi/Views/EQUISetup/_settings.cshtml
@@ -8,6 +8,11 @@
     </div>
     <div class="card-body">
         <p><a href="~/EQUISetup/RunDbTest" class="btn btn-warning btn-sm JQresultTriggerBtn">RunDbTest &raquo;</a>Test all confiured databases</p>
+
+        <hr />
+
+        <p><a href="~/c_LogclassRules/Index" class="btn btn-warning btn-sm">LogClassRules &raquo;</a>Manage how classiciation rules work</p>
+        <p><a href="~/Classification/ClassificationTool" class="btn btn-warning btn-sm">LogClassTool &raquo;</a>Tool for classifcation of errors</p>
     </div>
 </div>
 
