--- a/EqUiWebUi/Views/c_LogClassRules/Index.cshtml
+++ b/EqUiWebUi/Views/c_LogClassRules/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="card">
+﻿
+<div class="card">
     <div class="card-header bg-light">
         <h5 class="card-title text-black-50">
             c_LogClassRules
@@ -11,7 +12,7 @@
     </div>
 
     <div class="card-body">
-            @Html.AjaxGrid(Url.Action("_GetLogClassRulesGrid"))
+        @Html.AjaxGrid(Url.Action("_GetLogClassRulesGrid"))
     </div>
 </div>
 
