--- a/EqUiWebUi/Views/c_LogClassRules/Index.cshtml
+++ b/EqUiWebUi/Views/c_LogClassRules/Index.cshtml
@@ -16,3 +16,11 @@
     </div>
 </div>
 
+@section scripts{
+    <!--index script-->
+    <script>
+    //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
+</script>
+    }
